Thu Aug  1 21:02:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2str1): Raise an error for too big number.

Thu Aug  1 20:46:29 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (power_cache_get_power): Hide cached Bignum objects.

Thu Aug  1 19:15:05 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2str1): Remove non-trim mode.
	  (rb_big2str0): Non-trim mode implemented here.
	  (big2str_find_n1): Change the result type to long again.
	  (big2str_base_powerof2): Don't take arguments: len and trim.
	  (rb_big2str): Follow above change.

Thu Aug  1 12:37:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_alloc): New function to allocate the result string.
	  It is called after actual length is calculated.
	  (big2str_struct): Add fields: negative, result and ptr.
	  (big2str_orig): Write out the result via b2s->ptr.
	  (big2str_orig): Ditto.
	  (rb_big2str1): Don't allocate the result string at beginning.

Thu Aug  1 07:36:27 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_orig): Use temporary buffer when trim mode.

Thu Aug  1 06:28:48 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_orig): Simplified because RBIGNUM_LEN(x) <= 2 now.
	  (big2str_struct): Two fields added: hbase2, hbase2_numdigits.
	  (rb_big2str1): Initialize above fields.

Thu Aug  1 04:06:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/options.rb (RDoc#finish): include root path in include
	  paths, to work in another directory than the source directory.
	  [ruby-core:56282] [Bug #8712]

	* test/test_rdoc_markup_pre_process.rb (TestRDocMarkupPreProcess#setup):
	  fix input_file_name, as the test script is not pre-processed.

Thu Aug  1 01:45:18 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_karatsuba): Fix a condition of power_level.

Thu Aug  1 01:09:02 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (LOG2_KARATSUBA_BIG2STR_DIGITS): Removed.
	  (KARATSUBA_BIG2STR_DIGITS): Removed.
	  (big2str_numdigits_cache): New variable.